# ChangeLog for dev-python/commandlineapp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  23 Sep 2010; James Rowe <jnrowe@gmail.com> commandlineapp-3.0.5.ebuild:
  Keyworded x86.

  23 Sep 2010; James Rowe <jnrowe@gmail.com> commandlineapp-3.0.5.ebuild:
  Keyworded amd64.

  24 Aug 2010; James Rowe <jnrowe@gmail.com> commandlineapp-3.0.5.ebuild:
  Keyworded ~x86.

*commandlineapp-3.0.5 (24 Aug 2010)

  24 Aug 2010; James Rowe <jnrowe@gmail.com> +commandlineapp-3.0.5.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
