@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST CommandLineApp-3.0.5.tar.gz 160642 RMD160 c51913608c32e16696f5ffb95bfd2e4ea80b2a95 SHA1 2055225eefe93730818304517835d66fbbac38dd SHA256 a03cbc3aa069f0dd2b92eac2d7bb1b98be863a9f7dfa43cfee1cb01cc2c1a10c
+DIST CommandLineApp-3.0.6.tar.gz 174690 RMD160 b171eae5cbfe657cfd8963ea4484b8a2ae4dae44 SHA1 fed7e1897f79274bd0e5a81868cf8f34c6d41c2e SHA256 788ad6efdffb1bfcab92f3f060968cd852fea66d52afc41e9e8e3f727aca1785
 EBUILD commandlineapp-3.0.5.ebuild 742 RMD160 0ed7868ac728d14141db6a944030fb7ee10585a1 SHA1 276767ebf29a9469c0f61f314997279157f3e87b SHA256 1aea62bb7f6a016cb0fed10da411f41422d808f5455e8725f75823c544c48e34
-MISC ChangeLog 654 RMD160 1977afbd32d1fb284cb9738b04ac5930044893f0 SHA1 ed926c8fc8b6db3467c4e115b936ef7bb72f465a SHA256 99bb39f4b80ceb77d303bece8f1ce3ba622cb02abc737cf85b1e049788682134
+EBUILD commandlineapp-3.0.6.ebuild 771 RMD160 23bf5c498d6d2ce5f3c0f9cd821b16edad23824d SHA1 cf76c781c5c8d9189b135b79ee181ba0e1ae1764 SHA256 53ddd1685ec75a770d2f8688d01675f8447b103f2c1c7e3ca56c55cccaea7a85
+MISC ChangeLog 789 RMD160 05c5465242c8257098f72cb55b6946a130c91b0b SHA1 5546863b570ae67f44328a244c8c2e3e0be3bfe1 SHA256 850bdbe4e108cd7ceab1fcd4a6f725ad6e48c24c998bddbfff5fac28b403826f
 MISC metadata.xml 879 RMD160 a479ba4613c6b21c3b0c7e03ae4cf04d4726c188 SHA1 fcb63fc726f2c037572b95cb808653b36f5ba118 SHA256 e49ee1b2c86b7f104c4e0fc36c3b083fa70813bb26aada96479b9224336b8ce0
 MISC watch 29 RMD160 4da7fd0952387fab0a81a9fb9772aaaef2f66efd SHA1 d90eedfc398fa2de678881c42a1cbc649734255d SHA256 1d48864362609b3accbe02a98a2ab47c7e03770ea3cc4d1a56eea6046fb764a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0tqlUACgkQzJrj3cAXR0mNwgCglPGJnmUO/LiweRo7hHxIX5G9
-XTEAoKG8RxkrYIPnzjhA6iCw4EmlooPE
-=GLgl
+iEYEARECAAYFAk02yGEACgkQzJrj3cAXR0mZngCggUR+0s3KJu8avwjRMcTuokQM
+zhoAnjW27tt2egNWQdz2GOtpz26iG4ne
+=TMUq
 -----END PGP SIGNATURE-----
