@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
+>=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+http://www.doughellmann.com/downloads/CommandLineApp-3.0.6.tar.gz
+
+http://www.doughellmann.com/projects/CommandLineApp/
+MIT
+Makes creating apps as simple as defining callbacks to handle options
+~amd64 ~x86
+distutils multilib python toolchain-funcs
+test
+
+
+
+3
+
+compile install postinst postrm prepare test
+
+
+
+
+
