@@ -40,6 +40,8 @@ REM 2011-02-16 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/genzshcomp-
 REM 2011-02-16 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/genzshcomp-0.1 %a
 REM 2011-02-17 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/plac-0.7.5 %a
 REM 2011-02-17 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/plac-0.7.5 %a
+REM 2011-02-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/commandlineapp-3.0.6 %a
+REM 2011-02-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/commandlineapp-3.0.6 %a
 REM 2011-03-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-apps/mnemosyne-0.12 %a
 REM 2011-03-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-apps/mnemosyne-0.12 %a
 
