@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*commandlineapp-3.0.6 (19 Jan 2011)
+
+  19 Jan 2011; James Rowe <jnrowe@gmail.com> +commandlineapp-3.0.6.ebuild:
+  Version bump [255].
+
   12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
   Added watch file for package updates.
 
